tests/fixtures/invalid/bool_bitxor_dict.py
# Cannot bitwise XOR Bool and Dict[str, int]
x: bool = True ^ {"a": 1}
